common/common.scss
body {
  font-family: Marianne, Arial, sans-serif;
}

.home-banner > article {
  flex-direction: column;
  padding: 5rem 6rem;
  margin: 0 0 3rem 0;
  background: #F0F6F5 url($home_banner_image) no-repeat 80% 0;
  background-size: contain;

  .text {
    flex: 1;
    margin: 0;
    max-width: 70%;
    p {
      margin: .5rem 0;
    }
    .title {
      font-size: 2rem;
      font-weight: bold;
    }
  }

  button {
    width: max-content;
    background-color: #009F79;
    padding: 1rem 1.5rem;
    margin: 2rem 0;
    border-radius: 10rem;
    color: #fff;
    border: 0;
    &::after {
      content: " →";
      margin-left: .5rem;
    }
    & > svg {
      display: none;
    }
  }
}

